--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Sandile Manyoni</div>
-                <div class="text-3">And I'm a <span>Web Developer</span></div>
+                <div class="text-3">And I'm a <span class="typing"></span></div>
+
                 <!-- <a href="#">Hire me</a> -->
             </div>
         </div>
