--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Copyright <span class="far fa-copyright"> Sandile Manyoni</span> 2022. All rights reserved. Created by Sandile</span>
+        <span>Copyright <span class="far fa-copyright"></span>  Sandile Manyoni 2024. All rights reserved. Created by Sandile</span>
     </footer>
 
 
