--- a/index.html
+++ b/index.html
@@ -49,83 +49,79 @@
         </div>
     </section>
 
-    <!-- about section start -->
-    <section class="about" id="about">
-        <div class="max-width">
-            <h2 class="title">About me</h2>
-            <div class="about-content">
-                <div class="column left">
-                    <img src="images/Sandz.JPG" alt="">
+   <section class="about" id="about">
+    <div class="max-width">
+        <h2 class="title">About Me</h2>
+        <div class="about-content">
+            <div class="column left">
+                <img src="images/Sandz.JPG" alt="Sandile Manyoni">
+            </div>
+            <div class="column right">
+                <div class="text">I'm Sandile Manyoni and I'm a <span class="typing-2"></span></div>
+                <p>
+                    I am a results-driven technology professional with a passion for leveraging innovative solutions to solve real-world challenges. With a strong foundation in Information Systems, Business Management, and Finance, I excel at developing and optimizing processes to enhance productivity and efficiency. My experience spans technology transfer, intellectual property management, project administration, and lecturing in ICT disciplines. I aspire to contribute to groundbreaking advancements in technology while mentoring future professionals and continuously expanding my expertise in software development, data analysis, and process automation.
+                </p>
+                <div class="tab-titles">
+                    <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                    <p class="tab-links" onclick="opentab('education')">Education</p>
                 </div>
-                <div class="column right">
-                    <div class="text">I'm Sandile and I'm a <span class="typing-2"></span></div>
-                    <p> holder of postgraduate diploma in finance, banking and investment management, and a bachelor of science degree specializing in biochemistry and chemistry. 
-                        I have a strong knowledge of business management, information systems, investments, financial management and science from my postgraduate, and undergraduate studies. 
-                        I also have strong experience in the use of Information Management Systems, Microsoft Suite (Excel, Word, PowerPoint and Access), and conducting scientific research, financial and scientific report writing.
-                    </p>
-                    
-                    <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <!-- <p class="tab-links" onclick="opentab('experience')">Experience</p> -->
-                        <p class="tab-links" onclick="opentab('education')">Education</p>
+                <div class="tab-contents active-tab" id="skills">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
                     </div>
-
-                    <div class="column right active-tab" id="skills">
-                        <!-- <ul>
-                            <li><span>UI/UX</span><br>Desinging Web/App interfeces</li>
-                            <li><span>Web Development</span><br>Web app Development</li>
-                            <li><span>App Development</span><br>Building Android/iOS apps</li>
-                        </ul> -->
-                        <div class="bars">
-                            <div class="info">
-                                <span>HTML</span>
-                                <span>90%</span>
-                            </div>
-                            <div class="line html"></div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>80%</span>
                         </div>
-                        <div class="bars">
-                            <div class="info">
-                                <span>CSS</span>
-                                <span>60%</span>
-                            </div>
-                            <div class="line css"></div>
-                        </div>
-                        <div class="bars">
-                            <div class="info">
-                                <span>JavaScript</span>
-                                <span>80%</span>
-                            </div>
-                            <div class="line js"></div>
-                        </div>
-                        <div class="bars">
-                            <div class="info">
-                                <span>PHP</span>
-                                <span>50%</span>
-                            </div>
-                            <div class="line php"></div>
-                        </div>
-                        <div class="bars">
-                            <div class="info">
-                                <span>MySQL</span>
-                                <span>70%</span>
-                            </div>
-                            <div class="line mysql"></div>
-                        </div>
+                        <div class="line css"></div>
                     </div>
-                    
-                    <div class="tab-contents" id="education">
-                        <ul>
-                            <li><span>2019 - current</span><br>BCom in Information Systems and Business Management at Nelson Mandela University</li>
-                            <li><span>2018 - 2018</span><br>PGDip in Finance, Banking and Investment Management at University of KwaZulu-Natal</li>
-                            <li><span>2014-2017</span><br>BSc in Biochemistry and Chemistry at University of KwaZulu-Natal</li>
-                        </ul>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line js"></div>
                     </div>
-
-                    <a href="#">Download CV</a>
+                    <div class="bars">
+                        <div class="info">
+                            <span>SQL</span>
+                            <span>75%</span>
+                        </div>
+                        <div class="line sql"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>ASP.NET MVC</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line aspnet"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>C#</span>
+                            <span>65%</span>
+                        </div>
+                        <div class="line csharp"></div>
+                    </div>
                 </div>
+                <div class="tab-contents" id="education">
+                    <ul>
+                        <li><span>2025 (Expected)</span><br>BCom Honours in Information Systems and Business Management, Nelson Mandela University</li>
+                        <li><span>2024</span><br>BCom in Information Systems and Business Management, Nelson Mandela University</li>
+                        <li><span>2020</span><br>PGDip in Finance, Banking, and Investment Management, University of KwaZulu-Natal</li>
+                        <li><span>2018</span><br>BSc in Biochemistry and Chemistry, University of KwaZulu-Natal</li>
+                    </ul>
+                </div>
+                <a href="#">Download CV</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
 
     <!-- services section start
