--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
             <ul class="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <!-- <li><a href="#education">Education</a></li> -->
-                <!-- <li><a href="#skills">Skills</a></li> -->
-                <!-- <li><a href="#experience">Experience</a></li> -->
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="menu-btn">
