--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         </div>
     </section>
 
+
+    <!--About section start here-->
    <section class="about" id="about">
     <div class="max-width">
         <h2 class="title">About Me</h2>
@@ -57,7 +59,10 @@
             <div class="column right">
                 <div class="text">I'm Sandile Manyoni and I'm a <span class="typing-2"></span></div>
                 <p>
-                    I am a results-driven technology professional with a passion for leveraging innovative solutions to solve real-world challenges. With a strong foundation in Information Systems, Business Management, and Finance, I excel at developing and optimizing processes to enhance productivity and efficiency. My experience spans technology transfer, intellectual property management, project administration, and lecturing in ICT disciplines. I aspire to contribute to groundbreaking advancements in technology while mentoring future professionals and continuously expanding my expertise in software development, data analysis, and process automation.
+                    A passionate technology professional with expertise in Information Systems, Business Administration, and ICT education. I specialize in leveraging technology to optimize processes, develop innovative solutions, and mentor future ICT professionals. My goal is to make a meaningful impact by driving advancements in technology and supporting sustainable business growth.
+                </p>
+                <p>
+                    With a strong foundation in ICT and business, I excel in roles that require analytical thinking, problem-solving, and process improvement. Currently, I lecture ICT modules and contribute to building future-ready professionals.
                 </p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -106,6 +111,13 @@
                         </div>
                         <div class="line csharp"></div>
                     </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Power BI</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line powerbi"></div>
+                    </div>
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
@@ -113,6 +125,7 @@
                         <li><span>2024</span><br>BCom in Information Systems and Business Management, Nelson Mandela University</li>
                         <li><span>2020</span><br>PGDip in Finance, Banking, and Investment Management, University of KwaZulu-Natal</li>
                         <li><span>2018</span><br>BSc in Biochemistry and Chemistry, University of KwaZulu-Natal</li>
+                        <li><span>2013</span><br>Matric, KwaVusumuzi High School</li>
                     </ul>
                 </div>
                 <a href="#">Download CV</a>
@@ -120,6 +133,32 @@
         </div>
     </div>
 </section>
+
+    <!--Experience section start here-->
+
+<section class="experience" id="experience">
+    <div class="max-width">
+        <h2 class="title">Experience</h2>
+        <div class="experience-content">
+            <div class="card">
+                <h3>Lecturer, Rosebank College</h3>
+                <p><strong>Feb 2024 – Present</strong></p>
+                <p>Delivering ICT modules, mentoring students, and guiding them through practical projects.</p>
+            </div>
+            <div class="card">
+                <h3>Innovation Officer, Nelson Mandela University</h3>
+                <p><strong>Jan 2021 – Dec 2021</strong></p>
+                <p>Data analysis, IP management, and project administration for technology commercialization.</p>
+            </div>
+            <div class="card">
+                <h3>Technology Transfer Intern</h3>
+                <p><strong>Feb 2020 – Dec 2020</strong></p>
+                <p>Conducted market research and managed intellectual property systems for innovation projects.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 
    <!-- contact section start -->
 <section class="contact" id="contact">
