--- a/index.html
+++ b/index.html
@@ -69,56 +69,56 @@
                     <p class="tab-links" onclick="opentab('education')">Education</p>
                 </div>
                 <div class="tab-contents active-tab" id="skills">
-                    <div class="bars">
-                        <div class="info">
-                            <span>HTML</span>
-                            <span>90%</span>
-                        </div>
-                        <div class="line html"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>CSS</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line css"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>JavaScript</span>
-                            <span>80%</span>
-                        </div>
-                        <div class="line js"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>SQL</span>
-                            <span>75%</span>
-                        </div>
-                        <div class="line sql"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>ASP.NET MVC</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line aspnet"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>C#</span>
-                            <span>65%</span>
-                        </div>
-                        <div class="line csharp"></div>
-                    </div>
-                    <div class="bars">
-                        <div class="info">
-                            <span>Power BI</span>
-                            <span>70%</span>
-                        </div>
-                        <div class="line powerbi"></div>
-                    </div>
-                </div>
+    <div class="bars">
+        <div class="info">
+            <span>HTML</span>
+        </div>
+        <div class="line">
+            <span class="percentage">90%</span>
+        </div>
+    </div>
+    <div class="bars">
+        <div class="info">
+            <span>CSS</span>
+        </div>
+        <div class="line">
+            <span class="percentage">80%</span>
+        </div>
+    </div>
+    <div class="bars">
+        <div class="info">
+            <span>JavaScript</span>
+        </div>
+        <div class="line">
+            <span class="percentage">80%</span>
+        </div>
+    </div>
+    <div class="bars">
+        <div class="info">
+            <span>SQL</span>
+        </div>
+        <div class="line">
+            <span class="percentage">75%</span>
+        </div>
+    </div>
+    <div class="bars">
+        <div class="info">
+            <span>ASP.NET MVC</span>
+        </div>
+        <div class="line">
+            <span class="percentage">70%</span>
+        </div>
+    </div>
+    <div class="bars">
+        <div class="info">
+            <span>C#</span>
+        </div>
+        <div class="line">
+            <span class="percentage">65%</span>
+        </div>
+    </div>
+</div>
+
                 <div class="tab-contents" id="education">
                     <ul>
                         <li><span>2025 (Expected)</span><br>BCom Honours in Information Systems and Business Management, Nelson Mandela University</li>
