--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                 <img src="images/Sandz.JPG" alt="Sandile Manyoni">
             </div>
             <div class="column right">
-                <div class="text">I'm a <span class="typing-2"></span></div>, <p>
+                <div class="text">I'm a <span class="typing-2"></span></div>
+                
+                <p>
                     A passionate technology professional with expertise in Information Systems, Business Administration, and ICT education. I specialize in leveraging technology to optimize processes, develop innovative solutions, and mentor future ICT professionals. My goal is to make a meaningful impact by driving advancements in technology and supporting sustainable business growth.
                 </p>
                 <p>
