--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </section>
 
 
-    <!--About section start here-->
-   <section class="about" id="about">
+<!-- About section start here -->
+<section class="about" id="about">
     <div class="max-width">
         <h2 class="title">About Me</h2>
         <div class="about-content">
@@ -58,7 +58,6 @@
             </div>
             <div class="column right">
                 <div class="text">I'm a <span class="typing-2"></span></div>
-                
                 <p>
                     A passionate technology professional with expertise in Information Systems, Business Administration, and ICT education. I specialize in leveraging technology to optimize processes, develop innovative solutions, and mentor future ICT professionals. My goal is to make a meaningful impact by driving advancements in technology and supporting sustainable business growth.
                 </p>
@@ -70,56 +69,49 @@
                     <p class="tab-links" onclick="opentab('education')">Education</p>
                 </div>
                 <div class="tab-contents active-tab" id="skills">
-    <div class="bars">
-        <div class="info">
-            <span>HTML</span>
-        </div>
-        <div class="line">
-            <span class="percentage">90%</span>
-        </div>
-    </div>
-    <div class="bars">
-        <div class="info">
-            <span>CSS</span>
-        </div>
-        <div class="line">
-            <span class="percentage">80%</span>
-        </div>
-    </div>
-    <div class="bars">
-        <div class="info">
-            <span>JavaScript</span>
-        </div>
-        <div class="line">
-            <span class="percentage">80%</span>
-        </div>
-    </div>
-    <div class="bars">
-        <div class="info">
-            <span>SQL</span>
-        </div>
-        <div class="line">
-            <span class="percentage">75%</span>
-        </div>
-    </div>
-    <div class="bars">
-        <div class="info">
-            <span>ASP.NET MVC</span>
-        </div>
-        <div class="line">
-            <span class="percentage">70%</span>
-        </div>
-    </div>
-    <div class="bars">
-        <div class="info">
-            <span>C#</span>
-        </div>
-        <div class="line">
-            <span class="percentage">65%</span>
-        </div>
-    </div>
-</div>
-
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>SQL</span>
+                            <span>75%</span>
+                        </div>
+                        <div class="line sql"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>ASP.NET MVC</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line aspnet"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>C#</span>
+                            <span>65%</span>
+                        </div>
+                        <div class="line csharp"></div>
+                    </div>
+                </div>
                 <div class="tab-contents" id="education">
                     <ul>
                         <li><span>2025 (Expected)</span><br>BCom Honours in Information Systems and Business Management, Nelson Mandela University</li>
@@ -129,7 +121,7 @@
                         <li><span>2013</span><br>Matric, KwaVusumuzi High School</li>
                     </ul>
                 </div>
-                <a href="#">Download CV</a>
+                <a href="#" class="btn">Download CV</a>
             </div>
         </div>
     </div>
